<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Science Quiz</string>
    <string name="start">START QUIZ</string>
    <string name="logo">App Logo</string>
    <string name="choose" formatted="true">Hi <xliff:g id ="username" example="Name">%s</xliff:g>,\nSelect Your Preferred Subject</string>
    <string name="hint">Name</string>
    <string name="cat">CATEGORY</string>
    <string name="csc">COMPUTER SCIENCE</string>
    <string name="maths">MATHEMATICS</string>
    <string name="bio">BIOLOGY</string>
    <string name="chem">CHEMISTRY</string>
    <string name="home_page">HOME</string>
    <string name="submit">SUBMIT</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="score_answer">Score/Answers</string>
    <string name="mail">Feedback</string>
    <string name="csc_one">\t\t\t\tQuestion 1 \nMarkup tags tell the web browser</string>
    <string name="csc_a_one">How to organise the page</string>
    <string name="csc_b_one">How to display the page</string>
    <string name="csc_c_one">How to display the message box on the page</string>
    <string name="csc_d_one">None of these</string>
    <string name="csc_two">\t\t\t\tQuestion 2 \nThe CONST feature can be applied to</string>
    <string name="csc_a_two">an identifier</string>
    <string name="csc_b_two">an array</string>
    <string name="csc_c_two">an array argument</string>
    <string name="csc_d_two">None of the above</string>
    <string name="csc_three">\t\t\t\tQuestion 3 \nThe attributes of form tag include</string>
    <string name="csc_a_three">INPUT</string>
    <string name="csc_b_three">ACTION</string>
    <string name="csc_c_three">DIRECTION</string>
    <string name="csc_d_three">DIV</string>
    <string name="csc_four">\t\t\t\tQuestion 4 \nWWW is based on which model?</string>
    <string name="csc_a_four">Local-server</string>
    <string name="csc_b_four">Client-server</string>
    <string name="csc_c_four">3-tier</string>
    <string name="csc_d_four">2-tier</string>
    <string name="csc_five">\t\t\t\tQuestion 5 \nThe attribute which define the relationship between current document and HREF'ed URL is</string>
    <string name="csc_a_five">URL</string>
    <string name="csc_b_five">REL</string>
    <string name="csc_c_five">REV</string>
    <string name="csc_d_five">All of these</string>
    <string name="csc_six">\t\t\t\tQuestion 6 \nThe latest HTML standard is</string>
    <string name="csc_a_six">XML</string>
    <string name="csc_b_six">HTML 5.0</string>
    <string name="csc_c_six">HTML 4.0</string>
    <string name="csc_d_six">SGML</string>
    <string name="csc_seven">\t\t\t\tQuestion 7 \nThe body tag is usually used after </string>
    <string name="csc_a_seven">Title tag</string>
    <string name="csc_b_seven">HEAD tag</string>
    <string name="csc_c_seven">EM tag</string>
    <string name="csc_d_seven">FORM tag</string>
    <string name="csc_eight">\t\t\t\tQuestion 8 \nO(n) is better than O(1) time</string>
    <string name="csc_a_eight">True</string>
    <string name="csc_b_eight">False</string>
    <string name="csc_c_eight">Sometimes true</string>
    <string name="csc_d_eight">Sometimes false</string>
    <string name="csc_nine">\t\t\t\tQuestion 9 \nHTML stands for:</string>
    <string name="csc_ten">\t\t\t\tQuestion 10 \nThe information about array used in a program will be sorted in</string>
    <string name="csc_a_ten">Symbol table</string>
    <string name="csc_b_ten">Activation record</string>
    <string name="csc_c_ten">Both (a) and (b)</string>
    <string name="csc_d_ten">Dope vector</string>
    <string name="chem_one">\t\t\t\tQuestion 1 \nDuring oxidation process, electrons are:</string>
    <string name="chem_a_one">Lost</string>
    <string name="chem_b_one">Gained</string>
    <string name="chem_c_one">Paired up</string>
    <string name="chem_d_one">Remains the same</string>
    <string name="chem_two">\t\t\t\tQuestion 2 \nWhich of the following is an endothermic process?</string>
    <string name="chem_a_two">Fusion</string>
    <string name="chem_b_two">Temperature</string>
    <string name="chem_c_two">Vapourisation</string>
    <string name="chem_d_two">Velocity</string>
    <string name="chem_three">\t\t\t\tQuestion 3 \nWhich of the following affects rate of evaporation?</string>
    <string name="chem_a_three">Wind speed</string>
    <string name="chem_b_three">Insoluble heavy impurities</string>
    <string name="chem_c_three">Weight</string>
    <string name="chem_d_three">Temperature</string>
    <string name="chem_four">\t\t\t\tQuestion 4 \nA catalyst is:</string>
    <string name="chem_a_four">Consumed in reaction</string>
    <string name="chem_b_four">Produced in reaction</string>
    <string name="chem_c_four">Not affected in reaction</string>
    <string name="chem_d_four">Undergoes chemical change</string>
    <string name="chem_five">\t\t\t\tQuestion 5 \nA non-volatile solid is added to water. Its boiling point wil:</string>
    <string name="chem_a_five">Increase</string>
    <string name="chem_b_five">Decrease</string>
    <string name="chem_c_five">No change</string>
    <string name="chem_d_five">Can\'t be predicted</string>
    <string name="chem_six">\t\t\t\tQuestion 6 \nHeating of rubber with Sulphur is known as:</string>
    <string name="chem_a_six">Galvanization</string>
    <string name="chem_b_six">Vulcanization</string>
    <string name="chem_c_six">Melting</string>
    <string name="chem_d_six">Sulphonation</string>
    <string name="chem_seven">\t\t\t\tQuestion 7 \nIsomers have the same </string>
    <string name="chem_a_seven">Structural formula</string>
    <string name="chem_b_seven">Chemical properties</string>
    <string name="chem_c_seven">Molecular formula</string>
    <string name="chem_d_seven">Physical properties</string>
    <string name="chem_eight">\t\t\t\tQuestion 8 \nSea-water can be converted into fresh water by:</string>
    <string name="chem_a_eight">Osmosis</string>
    <string name="chem_b_eight">Sedimentation</string>
    <string name="chem_c_eight">Diffusion</string>
    <string name="chem_d_eight">Reverse Osmosis</string>
    <string name="chem_nine">\t\t\t\tQuestion 9 \nThe colour of vapours formed on sublimation of iodine solid is:</string>
    <string name="chem_ten">\t\t\t\tQuestion 10 \nGels are:</string>
    <string name="chem_a_ten">Gas dispersed in solid</string>
    <string name="chem_b_ten">Solids dispersed in gas</string>
    <string name="chem_c_ten">Gas dispersed in liquid</string>
    <string name="chem_d_ten">Liquids dispersed in solids</string>
    <string name="maths_one">\t\t\t\tQuestion 1 \nThe coefficient of x^2 in 4x^3 + 3x^2 - x + 1 is:</string>
    <string name="maths_a_one"> 1 </string>
    <string name="maths_b_one"> -1 </string>
    <string name="maths_c_one"> 3 </string>
    <string name="maths_d_one"> 2 </string>
    <string name="maths_two">\t\t\t\tQuestion 2 \nWhich of these are TRUE?</string>
    <string name="maths_a_two">The set of rational numbers is an abelian group under addition</string>
    <string name="maths_b_two">The set of rational integers is an abelian group under addition</string>
    <string name="maths_c_two">The set of rational numbers form an abelian group under multiplication</string>
    <string name="maths_d_two">None of these</string>
    <string name="maths_three">\t\t\t\tQuestion 3 \nWhich of the following are congruent modulo 7?</string>
    <string name="maths_a_three"> 10, 24 </string>
    <string name="maths_b_three"> 25, 56 </string>
    <string name="maths_c_three"> -31, 11 </string>
    <string name="maths_d_three"> -64, -15 </string>
    <string name="maths_four">\t\t\t\tQuestion 4 \nSimplify a(c-b)-b(a-c)</string>
    <string name="maths_a_four">ac-2ab-bc</string>
    <string name="maths_b_four">ac-2ab+bc</string>
    <string name="maths_c_four">ac+2ab+bc</string>
    <string name="maths_d_four">ac+bc</string>
    <string name="maths_five">\t\t\t\tQuestion 5 \n Expand and simplify (x-5)(x+4)</string>
    <string name="maths_a_five">x^2 + 9x - 20</string>
    <string name="maths_b_five">x*2 - x - 9</string>
    <string name="maths_c_five">x^ - x - 1</string>
    <string name="maths_d_five">x^2 - x - 20</string>
    <string name="maths_six">\t\t\t\tQuestion 6 \nSimplify (1/s) - (1/t)</string>
    <string name="maths_a_six">(s-t)/st</string>
    <string name="maths_b_six">(t-s)/st</string>
    <string name="maths_c_six">0</string>
    <string name="maths_d_six">1/(s-t)</string>
    <string name="maths_seven">\t\t\t\tQuestion 7 \nSimplify (2/tanA)+(4/tanB)</string>
    <string name="maths_a_seven">(2tanB + 4tanA)/tanAtanB</string>
    <string name="maths_b_seven">(2tanA + 4tanB)/tanAtanB</string>
    <string name="maths_c_seven">6/(tanA+tanB)</string>
    <string name="maths_d_seven">None of the above</string>
    <string name="maths_eight">\t\t\t\tQuestion 8 \nLogarithm to the base 10 of 1000 is:</string>
    <string name="maths_a_eight">1</string>
    <string name="maths_b_eight">2</string>
    <string name="maths_c_eight">3</string>
    <string name="maths_d_eight">4</string>
    <string name="maths_nine">\t\t\t\tQuestion 9 \nIf A = (1, 2, 3, 4). Let ~={(1,2),(1,3),(4,2)}. Then ~ is</string>
    <string name="maths_ten">\t\t\t\tQuestion 10 \nSolve the equations 2x^2 + y^2 = 600, 3xy = 600</string>
    <string name="maths_a_ten">x=10, y=20</string>
    <string name="maths_b_ten">x=20, y=10</string>
    <string name="maths_c_ten">x=-10, y=-20</string>
    <string name="maths_d_ten">x=-20, y=-10</string>
    <string name="bio_one">\t\t\t\tQuestion 1 \nWhat is the purpose of white corpuscles</string>
    <string name="bio_a_one">To carry nutrients</string>
    <string name="bio_b_one">To combat infection</string>
    <string name="bio_c_one">To carry oxygen</string>
    <string name="bio_d_one">To get strength</string>
    <string name="bio_two">\t\t\t\tQuestion 2 \nThe structures used in gaseous exchange in humans include</string>
    <string name="bio_a_two">Trachea</string>
    <string name="bio_b_two">Lungs</string>
    <string name="bio_c_two">Bronchitis</string>
    <string name="bio_d_two">Membrane</string>
    <string name="bio_three">\t\t\t\tQuestion 3 \nFactors that cause increase in the rate of transpiration from leaves include</string>
    <string name="bio_a_three">Temperature</string>
    <string name="bio_b_three">Increased light intensity</string>
    <string name="bio_c_three">High humidity</string>
    <string name="bio_d_three">Low relative humidity</string>
    <string name="bio_four">\t\t\t\tQuestion 4 \nTotal volume of blood in human being is</string>
    <string name="bio_a_four">5&#8211;6 litres</string>
    <string name="bio_b_four">3&#8211;4 litres</string>
    <string name="bio_c_four">8&#8211;10 litres</string>
    <string name="bio_d_four">10&#8211;12 litres</string>
    <string name="bio_five">\t\t\t\tQuestion 5 \nRed blood corpuscles are formed in the </string>
    <string name="bio_a_five">Liver</string>
    <string name="bio_b_five">Bone marrow</string>
    <string name="bio_c_five">Kidneys</string>
    <string name="bio_d_five">Heart</string>
    <string name="bio_six">\t\t\t\tQuestion 6 \nBlood does not coagulate inside the body due to the process of</string>
    <string name="bio_a_six">Haemoglobin</string>
    <string name="bio_b_six">Heparin</string>
    <string name="bio_c_six">Fibrin</string>
    <string name="bio_d_six">Plasma</string>
    <string name="bio_seven">\t\t\t\tQuestion 7 \nThe number of bones in the human body of an adult is approximately</string>
    <string name="bio_a_seven">210</string>
    <string name="bio_b_seven">250</string>
    <string name="bio_c_seven">206</string>
    <string name="bio_d_seven">80</string>
    <string name="bio_eight">\t\t\t\tQuestion 8 \nLungs are situated in the</string>
    <string name="bio_a_eight">Abdominal cavity</string>
    <string name="bio_b_eight">Pericardinal cavity</string>
</resources>